	    /usr/share/wayland-protocols/unstable/xdg-shell/xdg-shell-unstable-v5.xml \
	    xdg-shell-unstable-v5-client-protocol.h
	$ wayland-scanner code \
	    /usr/share/wayland-protocols/unstable/xdg-shell/xdg-shell-unstable-v5.xml \
	    xdg-shell-unstable-v5-protocol.c

	On Debian, xdg-shell-unstable-v5.xml ships in wayland-protocols and
	wayland-scanner ships in libwayland-bin.

2018-02-03  Ivan Vucica <ivan@vucica.net>

	* configure.ac
	* config.h.in
	* configure
	* Source/wayland/xdg-shell-unstable-v5-protocol.c
	* Source/wayland/WalyandServer.m
	* Source/wayland/GNUmakefile.preamble
	* Source/wayland/GNUmakefile
	* Source/cairo/WaylandCairoSurface.m
	* Source/cairo/GNUmakefile
	* Source/cairo/CairoGState.m
	* Source/cairo/CairoFontInfo.m
	* Source/cairo/CairoContext.m
	* Source/GSBackend.m
	* Headers/Wayland/xdg-shell-unstable-v5-client-protocol.h
	* Headers/wayland/WaylandServer.h
	* Headers/cairo/WaylandCairoSurface.h:
	Dirty Wayland backend implementation.
	Patch by Sergio L. Pascual <sergiolpascual@flexvdi.com>

2018-01-21  Yavor Doganov  <yavor@gnu.org>

	* configure.ac: Add FREETYPE_LIBS to LIBS when building xlib.
	* configure: Regenerate

2018-01-20  Yavor Doganov  <yavor@gnu.org>

	* configure.ac: Detect freetype with PKG_CHECK_MODULES.
	* configure: Regenerate.

2018-01-03  Yavor Doganov  <yavor@gnu.org>

	* pkg.m4: Update to serial 12.
	* configure.ac: Use PKG_PROG_PKG_CONFIG to detect pkg-config.
	Remove all PKG_* shell variables.
	* configure: Regenerate.

2018-01-01  Ivan Vucica <ivan@vucica.net>

	* ANNOUNCE
	* Documentation/news.texi
	* NEWS
	* README
	* Version:
	Releasing 0.26.2 to coincide with the -gui release.

2017-12-21  Ivan Vucica <ivan@vucica.net>

	* ANNOUNCE
	* Documentation/news.texi
	* README
	* Version
	* NEWS:
	Releasing 0.26.1 to coincide with the -gui release.

2017-12-10  Ivan Vucica <ivan@vucica.net>

	* ANNOUNCE
	* Documentation/news.texi
	* README:
	Added release notes to news.texi and regenerated the rest for